--- a/client/index.html
+++ b/client/index.html
@@ -10,17 +10,17 @@
         var socket = io.connect();
     </script>
 
-    <script src='js/quintus.js'></script>
-    <script src='js/quintus_sprites.js'></script>
-    <script src='js/quintus_scenes.js'></script>
-    <script src='js/quintus_input.js'></script>
-    <script src='js/quintus_anim.js'></script>
-    <script src='js/quintus_2d.js'></script>
-    <script src='js/quintus_touch.js'></script>
-    <script src='js/quintus_ui.js'></script>
-    <script src='js/quintus_tmx.js'></script>
-    <script src='js/quintus_audio.js'></script>
-    <script src="platformer.js"></script>
+    <script src='js/lib/quintus.js'></script>
+    <script src='js/lib/quintus_sprites.js'></script>
+    <script src='js/lib/quintus_scenes.js'></script>
+    <script src='js/lib/quintus_input.js'></script>
+    <script src='js/lib/quintus_anim.js'></script>
+    <script src='js/lib/quintus_2d.js'></script>
+    <script src='js/lib/quintus_touch.js'></script>
+    <script src='js/lib/quintus_ui.js'></script>
+    <script src='js/lib/quintus_tmx.js'></script>
+    <script src='js/lib/quintus_audio.js'></script>
+    <script src="js/platformer.js"></script>
 
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
